--- a/Maison des jeunes/Vue/Jimmy.html
+++ b/Maison des jeunes/Vue/Jimmy.html
@@ -18,9 +18,13 @@
 <header class="site-header">
     <!-- Diaporama -->
     <div class="slideshow">
-      <img src="..\Images\IMG_5216.png" alt="Slide 1" class="slide active">
-      <img src="..\Images\IMG_5217.png" alt="Slide 2" class="slide">
-      <img src="..\Images\IMG_5218.png" alt="Slide 3" class="slide">
+      <img src="../Images/slide/IMG_5218.png" alt="Slide 1" class="slide active">
+      <img src="../Images/slide/IMG_5217.png" alt="Slide 2" class="slide">
+      <img src="../Images/slide/IMG_2552.jpeg" alt="Slide 3" class="slide">
+      <img src="../Images/slide/IMG_5251.png" alt="Slide 4" class="slide">
+      <img src="../Images/slide/IMG_2446.jpeg" alt="Slide 5" class="slide">
+      <img src="../Images/slide/IMG_8517.jpeg" alt="Slide 6" class="slide">
+      <img src="../Images/slide/IMG_8516.jpeg" alt="Slide 7" class="slide">
     </div>
     <div class="logo-titre">
       <a href="Jimmy.html" style="padding-right: 20px;"><img src="..\Images\logo.webp" alt="Logo L'hote Maison"></a>
@@ -111,6 +115,35 @@
 </section>
 
 
+<hr>
+<section class="texte-accueil">
+  <p style="padding: 40px;">
+    Hey Hey Hey, as-tu connu Jimmy Rancourt? Si oui, toi aussi tu as été sous le choc lorsque tu as
+    appris son décès le 15 septembre 2024. Au nom de toute l’équipe de l’Hôte Maison, nos sincères
+    condoléances.
+    Sinon, laisse-moi tenter de t’expliquer en quelques phrases qui était Jimmy Rancourt.
+    Jimmy c’était 21 ans de services à l’Hôte Maison
+    Jimmy c’était plus que 25 ans d’expérience en animation et en événementiel
+    Jimmy c’était un passionné d’humour et d’impro, un homme qui aimait taquiner et
+    surprendre par son sens de la répartie.
+    Jimmy c’était un être chaleureux, avec un cœur gros comme le monde qui aurait donné la
+    lune pour aider quelqu’un dans le besoin.
+    Jimmy, c’était la personne la plus charismatique que j’ai vue de ma vie. La vedette de
+    Rosemont. Être avec Jimmy, par définition, ça ne pouvait JAMAIS être plate et ennuyeux.
+    Un rayon de soleil qui a brillé de mille feux et qui s’est éteint en laissant derrière lui des
+    centaines, voire des milliers d’étincelles. Jeunes, parents, collègues; l’influence que Jimmy a eue
+    sur tous ces gens est indéniable. Les moments qu’il a créés, les rêves qu’il a soutenus, les
+    carrières qu’il a aidées à poursuivre, les passes difficiles qu’il a allégées… Pour ceux et celles qui
+    n’ont pas connu Jimmy, vous avez manqué un géant, mais je peux vous assurer que ce sont les
+    géants qui font les plus grandes vagues, et qu’on surfera sur la sienne pour encore plusieurs
+    années à venir
+    (Et non Jimmy c’est pas une joke de gros)
+    Bref, Merci pour tout Jimmy
+    K BYE
+  </p>
+</section>
+
+
 
 
 
@@ -118,7 +151,7 @@
      <hr>
 
 <div class="contact-grid">
-  <div style="text-align: center;">
+  <div class="texte-accueil">
     <h2 class="text-note">Nous contacter</h2>
     <div><b>Adresse:</b> 1555 rue de Bellechasse, Montréal (QC), H2G 1N9</div>
     <div><b>Téléphone:</b> (514) 273-0805</div>
@@ -132,7 +165,7 @@
     <br>
   </div>
 
-  <div style="text-align: center;">
+  <div class="texte-accueil">
     <h2 class="text-note">Heures d’ouverture (année scolaire 2025-2026)</h2>
     <ul>
       <li>Lundi au mercredi : 15h00 à 20h00</li>
