--- a/Maison des jeunes/Vue/accueil.html
+++ b/Maison des jeunes/Vue/accueil.html
@@ -18,9 +18,13 @@
 <header class="site-header">
     <!-- Diaporama -->
     <div class="slideshow">
-      <img src="..\Images\IMG_5216.png" alt="Slide 1" class="slide active">
-      <img src="..\Images\IMG_5217.png" alt="Slide 2" class="slide">
-      <img src="..\Images\IMG_5218.png" alt="Slide 3" class="slide">
+      <img src="../Images/slide/IMG_5218.png" alt="Slide 1" class="slide active">
+      <img src="../Images/slide/IMG_5217.png" alt="Slide 2" class="slide">
+      <img src="../Images/slide/IMG_2552.jpeg" alt="Slide 3" class="slide">
+      <img src="../Images/slide/IMG_5251.png" alt="Slide 4" class="slide">
+      <img src="../Images/slide/IMG_2446.jpeg" alt="Slide 5" class="slide">
+      <img src="../Images/slide/IMG_8517.jpeg" alt="Slide 6" class="slide">
+      <img src="../Images/slide/IMG_8516.jpeg" alt="Slide 7" class="slide">
     </div>
     <div class="logo-titre">
       <a href="Jimmy.html" style="padding-right: 20px;"><img src="..\Images\logo.webp" alt="Logo L'hote Maison"></a>
@@ -133,18 +137,17 @@
     </div>
     <br><br><br>
   </section>
-  <section class="text-link">
-    <p style="text-align: center;">Tenez-vous informé.e.s à la page <em>d’<a href="#Nouvelle">Actualités</a></em> ou sur <em><a href="https://www.google.com/search?q=l%27h%C3%B4te+maison+&gs_lcp=CgZwc3ktYWIQAzIGCAAQFhAeMgIIJjoKCAAQxwEQrwEQQzoICAAQsQMQgwE6BQgAELEDOgsIABCxAxDHARCjAjoCCAA6BAgAEEM6CggAEMcBEKMCEEM6CAguELEDEIMBOgsIABCxAxDHARCvAToCCC46CAgAEMcBEK8BUMQXWIYsYK0taANwAXgAgAFriAHcC5IBBDE0LjOYAQCgAQGqAQdnd3Mtd2l6wAEB">Google</a></em> 😉</p>
-    <p style="text-align: center;">Suis-nous sur <em><a href="https://fr-ca.facebook.com/lhote.maison">Facebook</a></em>, <em><a href="https://www.instagram.com/lhotemaison/">Instagram</a></em> ou <em><a href="https://www.tiktok.com/@lhotemaison?lang=fr">Tik tok</a></em> pour être au courant de tout!</p>
-    <p style="text-align: center;">Pour en savoir plus sur l’Hôte Maison, visite aussi sa chaîne <em><a href="https://www.youtube.com/channel/UCCoOsuuxjMWhZb6A9pXWagg?view_as=subscriber">Youtube</a>.</em></p>
-    <br>
+  <section class="texte-accueil text-link">
+    <p>Tenez-vous informé.e.s à la page <em>d’<a href="#Nouvelle">Actualités</a></em> ou sur <em><a href="https://www.google.com/search?q=l%27h%C3%B4te+maison+&gs_lcp=CgZwc3ktYWIQAzIGCAAQFhAeMgIIJjoKCAAQxwEQrwEQQzoICAAQsQMQgwE6BQgAELEDOgsIABCxAxDHARCjAjoCCAA6BAgAEEM6CggAEMcBEKMCEEM6CAguELEDEIMBOgsIABCxAxDHARCvAToCCC46CAgAEMcBEK8BUMQXWIYsYK0taANwAXgAgAFriAHcC5IBBDE0LjOYAQCgAQGqAQdnd3Mtd2l6wAEB">Google</a></em> 😉</p>
+    <p>Suis-nous sur <em><a href="https://fr-ca.facebook.com/lhote.maison">Facebook</a></em>, <em><a href="https://www.instagram.com/lhotemaison/">Instagram</a></em> ou <em><a href="https://www.tiktok.com/@lhotemaison?lang=fr">Tik tok</a></em> pour être au courant de tout!</p>
+    <p>Pour en savoir plus sur l’Hôte Maison, visite aussi sa chaîne <em><a href="https://www.youtube.com/channel/UCCoOsuuxjMWhZb6A9pXWagg?view_as=subscriber">Youtube</a>.</em></p>
+    <br></section>
     <h2 class="text-note">COMMENTAIRES ET AVIS </h2><hr>
     <div class="grid commentairesEtAvis">
       <div class="card">
         <!-- Calendrier image -->
         <img src="..\Images\COMMENTAIRES-ET-AVIS.webp" alt="COMMENTAIRES ET AVIS" width="650" height="auto">
     </div></div>
-  </section>
 
 
 
@@ -153,7 +156,7 @@
      <hr>
 
 <div class="contact-grid">
-  <div style="text-align: center;">
+  <div class="texte-accueil">
     <h2 class="text-note">Nous contacter</h2>
     <div><b>Adresse:</b> 1555 rue de Bellechasse, Montréal (QC), H2G 1N9</div>
     <div><b>Téléphone:</b> (514) 273-0805</div>
@@ -167,7 +170,7 @@
     <br>
   </div>
 
-  <div style="text-align: center;">
+  <div class="texte-accueil">
     <h2 class="text-note">Heures d’ouverture (année scolaire 2025-2026)</h2>
     <ul>
       <li>Lundi au mercredi : 15h00 à 20h00</li>
