--- a/Maison des jeunes/Vue/emplois.html
+++ b/Maison des jeunes/Vue/emplois.html
@@ -18,9 +18,13 @@
 <header class="site-header">
     <!-- Diaporama -->
     <div class="slideshow">
-      <img src="..\Images\IMG_5216.png" alt="Slide 1" class="slide active">
-      <img src="..\Images\IMG_5217.png" alt="Slide 2" class="slide">
-      <img src="..\Images\IMG_5218.png" alt="Slide 3" class="slide">
+      <img src="../Images/slide/IMG_5218.png" alt="Slide 1" class="slide active">
+      <img src="../Images/slide/IMG_5217.png" alt="Slide 2" class="slide">
+      <img src="../Images/slide/IMG_2552.jpeg" alt="Slide 3" class="slide">
+      <img src="../Images/slide/IMG_5251.png" alt="Slide 4" class="slide">
+      <img src="../Images/slide/IMG_2446.jpeg" alt="Slide 5" class="slide">
+      <img src="../Images/slide/IMG_8517.jpeg" alt="Slide 6" class="slide">
+      <img src="../Images/slide/IMG_8516.jpeg" alt="Slide 7" class="slide">
     </div>
     <div class="logo-titre">
       <a href="Jimmy.html" style="padding-right: 20px;"><img src="..\Images\logo.webp" alt="Logo L'hote Maison"></a>
@@ -126,7 +130,7 @@
      <hr>
 
 <div class="contact-grid">
-  <div style="text-align: center;">
+  <div class="texte-accueil">
     <h2 class="text-note">Nous contacter</h2>
     <div><b>Adresse:</b> 1555 rue de Bellechasse, Montréal (QC), H2G 1N9</div>
     <div><b>Téléphone:</b> (514) 273-0805</div>
@@ -140,7 +144,7 @@
     <br>
   </div>
 
-  <div style="text-align: center;">
+  <div class="texte-accueil">
     <h2 class="text-note">Heures d’ouverture (année scolaire 2025-2026)</h2>
     <ul>
       <li>Lundi au mercredi : 15h00 à 20h00</li>
