--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
           <img src="Images/NutriPlus.png" alt="Site NutriPlus">
           <h3>NutriPlus</h3>
           <p>Une application nutritionnelle<br><strong>(non optimisée pour mobile)</strong></p>
-          <a href="application_nutrionnelle/vue/page_de_connexion_ou_inscription.php" target="_blank">Visiter le site</a>
+          <a href="application_nutrionnelle/vue/page_de_connexion_ou_inscription.php">Visiter le site</a>
         </div>
 
         <div class="site-card">
           <img src="Images/maison des jeunes.png" alt="Site Maison des Jeunes">
           <h3>L'hôte Maison</h3>
           <p>Site pour la Maison des Jeunes<br><strong>(optimisé pour mobile)</strong></p>
-          <a href="Maison des jeunes/Vue/accueil.html" target="_blank">Visiter le site</a>
+          <a href="Maison des jeunes/Vue/accueil.html">Visiter le site</a>
         </div>
 
         <!-- Ajoute autant de cartes que nécessaire -->
