--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <img src="Images/NutriPlus.png" alt="Site NutriPlus">
           <h3>NutriPlus</h3>
           <p>Une application nutritionnelle<br><strong>(non optimisée pour mobile)</strong></p>
-          <a href="application_nutrionnelle/vue/page_de_connexion_ou_inscription.html">Visiter le site</a>
+          <a href="application_nutrionnelle/vue/page_de_connexion_ou_inscription.php">Visiter le site</a>
         </div>
 
         <div class="site-card">
